<resources>
    <string name="app_name">DragonBall</string>
    <string name="login_title">Dragon Ball</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="btn_login">Entrar</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="batalla">Batalla</string>
    <string name="btn_iniciar_batalla">Iniciar Batalla</string>
    <string name="vs">VS</string>
    <string name="tv_name">Name</string>
    <string name="tv_life">100</string>
</resources>